--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <div class="col-lg-4 col-md-6">
                 <div class="box">
                     <h2 id="section1">Section 1</h2>
-                    <p>As you navigate life's twists and turns, remember resilience fuels growth. Embrace change, 
-                        celebrate victories, and learn from setbacks. Your journey molds the masterpiece of your unique story</p>
+                    <p>Embark on the journey of self-discovery with an open heart and curious mind. Embrace challenges as opportunities for growth,
+                        and let resilience be your guiding force. Your story unfolds with each step, a testament to the strength within you.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="box">
                     <h2 id="section2">Section 2</h2>
-                    <p>In the tapestry of existence, weave compassion and curiosity. Embrace the unknown, for therein lies discovery. 
-                        Cultivate resilience amidst challenges, and let each experience sculpt the masterpiece of your evolving narrative.</p>
+                    <p>Embark on the journey of self-discovery with an open heart and curious mind. Embrace challenges as opportunities for growth,
+                        and let resilience be your guiding force. Your story unfolds with each step, a testament to the strength within you.</p>
                 </div>
             </div> 
             <div class="col-lg-4 col-md-12">
